--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-loader-spinner": "^5.0.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
